<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/item_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#F5F5F5"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_item_click"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/user_img"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_person"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:src="@mipmap/dashi" />

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/replace" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_nick"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_item_click"
                android:gravity="center_vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F5F5F5"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/nick"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_nick"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/nick"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/modify" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_sex"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_item_click"
                android:gravity="center_vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F5F5F5"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/sex"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/modify" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_pw"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_item_click"
                android:gravity="center_vertical">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F5F5F5"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/password"

                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_password"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:inputType="numberPassword"
                        android:maxLength="6"
                        android:text="xxxxxxxx"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/ic_navigate_next"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/modify" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_gift"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_item_click"
                android:gravity="center_vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F5F5F5"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/live_gift"

                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_gift"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="100"
                        android:textColor="@color/green"
                        android:textSize="16sp" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>